# ia-project

./: README.md  domain.pddl  problem1.pddl  problem2.ppdl  rescue_domain.pddl  rescue_instance1.pddl  rescue_instance2.pddl  rescue_instance3.pddl
Pddl4jPlanner/: .classpath  .project  rescue_instance1.pddl  rescue_instance2.pddl  rescue_instance3.pddl
Pddl4jPlanner/launch_config/: AstarCustom_instance1.launch  AstarCustom_instance2.launch  AstarCustom_instance3.launch
Pddl4jPlanner/src/unical/: AstarCustom.java  Node.java  PositiveAdjustedSum.java
custom_planner/: ASP.java  rescue_instance2.pddl
custom_planner/src/unical/asp/: ASP.java  (+2 more)
mercuri/: domain.pddl  problem1.pddl
pddl4j/: .project
pddl_files/: rescue_domain.pddl  rescue_instance1.pddl  rescue_instance2.pddl
pddl_ia/: .classpath  .project  rescue_domain_relax.pddl  rescue_instance2_relax.pddl
pddl_ia/src/pddl_ia/: AstarCustom.java  CustomHeuristics.java  Node.java
pisano/: instance1.pddl  instance2.pddl  instance3.pddl  logistics.pddl
plansys2/: info.txt
plansys2_project/: CMakeLists.txt  Dockerfile  build_info.txt  install_info.txt  output.txt  package.xml
plansys2_project/launch/: commands  plansys2_project_launch.py
plansys2_project/pddl/: rescue_domain_conv.pddl  rescue_domain_plan.plan  rescue_domain_plansys.pddl
plansys2_project/src/: drop_box_of_carrier.cpp  drop_content_of_box.cpp  move_robot.cpp  move_robot_with_carrier.cpp  put_box_on_carrier.cpp  put_content_in_box.cpp
planutils/: Dockerfile  info.txt
planutils/pddl_files_conv/: rescue_domain_conv.pddl  rescue_instance1_conv.pddl
ppdl_files/: rescue_domain.pddl
relax_domain/: rescue_domain_relax.pddl  rescue_instance1_relax.pddl  rescue_instance2_relax.pddl
relax_domain_2/: rescue_domain_relax_2.pddl  rescue_instance1_relax_2.pddl  rescue_instance2_relax_2.pddl
(+4 files in other folders)
